raylib-sys/bindings_web.rs

extern "C" {
    #[link_name = "SetShapesTexture"]
    pub fn SetShapesTexture(texture: Texture2D, source: Rectangle);
}
extern "C" {
    #[link_name = "CheckCollisionRecs"]
    pub fn CheckCollisionRecs(rec1: Rectangle, rec2: Rectangle) -> bool;
}
extern "C" {
    #[link_name = "CheckCollisionCircles"]
    pub fn CheckCollisionCircles(
        center1: Vector2,
        radius1: f32,
        center2: Vector2,
        radius2: f32,
    ) -> bool;
}
extern "C" {
    #[link_name = "CheckCollisionCircleRec"]
    pub fn CheckCollisionCircleRec(center: Vector2, radius: f32, rec: Rectangle) -> bool;
}
extern "C" {
    #[link_name = "GetCollisionRec"]
    pub fn GetCollisionRec(rec1: Rectangle, rec2: Rectangle) -> Rectangle;
}
extern "C" {
    #[link_name = "CheckCollisionPointRec"]
    pub fn CheckCollisionPointRec(point: Vector2, rec: Rectangle) -> bool;
}
extern "C" {
    #[link_name = "CheckCollisionPointCircle"]
    pub fn CheckCollisionPointCircle(point: Vector2, center: Vector2, radius: f32) -> bool;
}
extern "C" {
    #[link_name = "CheckCollisionPointTriangle"]
    pub fn CheckCollisionPointTriangle(
        point: Vector2,
        p1: Vector2,
        p2: Vector2,
        p3: Vector2,
    ) -> bool;
}
extern "C" {
    #[link_name = "LoadImage"]
    pub fn LoadImage(fileName: *const ::std::os::raw::c_char) -> Image;
}
extern "C" {
    #[link_name = "LoadImageEx"]
    pub fn LoadImageEx(
        pixels: *mut Color,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
    ) -> Image;
}
extern "C" {
    #[link_name = "LoadImagePro"]
    pub fn LoadImagePro(
        data: *mut ::std::os::raw::c_void,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        format: ::std::os::raw::c_int,
    ) -> Image;
}
extern "C" {
    #[link_name = "LoadImageRaw"]
    pub fn LoadImageRaw(
        fileName: *const ::std::os::raw::c_char,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        format: ::std::os::raw::c_int,
        headerSize: ::std::os::raw::c_int,
    ) -> Image;
}
extern "C" {
    #[link_name = "ExportImage"]
    pub fn ExportImage(image: Image, fileName: *const ::std::os::raw::c_char);
}
extern "C" {
    #[link_name = "ExportImageAsCode"]
    pub fn ExportImageAsCode(image: Image, fileName: *const ::std::os::raw::c_char);
}
extern "C" {
    #[link_name = "LoadTexture"]
    pub fn LoadTexture(fileName: *const ::std::os::raw::c_char) -> Texture2D;
}
extern "C" {
    #[link_name = "LoadTextureFromImage"]
    pub fn LoadTextureFromImage(image: Image) -> Texture2D;
}
extern "C" {
    #[link_name = "LoadRenderTexture"]
    pub fn LoadRenderTexture(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
    ) -> RenderTexture2D;
}
extern "C" {
    #[link_name = "UnloadImage"]
    pub fn UnloadImage(image: Image);
}
extern "C" {
    #[link_name = "UnloadTexture"]
    pub fn UnloadTexture(texture: Texture2D);
}
extern "C" {
    #[link_name = "UnloadRenderTexture"]
    pub fn UnloadRenderTexture(target: RenderTexture2D);
}
extern "C" {
    #[link_name = "GetImageData"]
    pub fn GetImageData(image: Image) -> *mut Color;
}
extern "C" {
    #[link_name = "GetImageDataNormalized"]
    pub fn GetImageDataNormalized(image: Image) -> *mut Vector4;
}
extern "C" {
    #[link_name = "GetPixelDataSize"]
    pub fn GetPixelDataSize(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        format: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetTextureData"]
    pub fn GetTextureData(texture: Texture2D) -> Image;
}
extern "C" {
    #[link_name = "UpdateTexture"]
    pub fn UpdateTexture(texture: Texture2D, pixels: *const ::std::os::raw::c_void);
}
extern "C" {
    #[link_name = "ImageCopy"]
    pub fn ImageCopy(image: Image) -> Image;
}
extern "C" {
    #[link_name = "ImageToPOT"]
    pub fn ImageToPOT(image: *mut Image, fillColor: Color);
}
extern "C" {
    #[link_name = "ImageFormat"]
    pub fn ImageFormat(image: *mut Image, newFormat: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "ImageAlphaMask"]
    pub fn ImageAlphaMask(image: *mut Image, alphaMask: Image);
}
extern "C" {
    #[link_name = "ImageAlphaClear"]
    pub fn ImageAlphaClear(image: *mut Image, color: Color, threshold: f32);
}
extern "C" {
    #[link_name = "ImageAlphaCrop"]
    pub fn ImageAlphaCrop(image: *mut Image, threshold: f32);
}
extern "C" {
    #[link_name = "ImageAlphaPremultiply"]
    pub fn ImageAlphaPremultiply(image: *mut Image);
}
extern "C" {
    #[link_name = "ImageCrop"]
    pub fn ImageCrop(image: *mut Image, crop: Rectangle);
}
extern "C" {
    #[link_name = "ImageResize"]
    pub fn ImageResize(
        image: *mut Image,
        newWidth: ::std::os::raw::c_int,
        newHeight: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[link_name = "ImageResizeNN"]
    pub fn ImageResizeNN(
        image: *mut Image,
        newWidth: ::std::os::raw::c_int,
        newHeight: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[link_name = "ImageResizeCanvas"]
    pub fn ImageResizeCanvas(
        image: *mut Image,
        newWidth: ::std::os::raw::c_int,
        newHeight: ::std::os::raw::c_int,
        offsetX: ::std::os::raw::c_int,
        offsetY: ::std::os::raw::c_int,
        color: Color,
    );
}
extern "C" {
    #[link_name = "ImageMipmaps"]
    pub fn ImageMipmaps(image: *mut Image);
}
extern "C" {
    #[link_name = "ImageDither"]
    pub fn ImageDither(
        image: *mut Image,
        rBpp: ::std::os::raw::c_int,
        gBpp: ::std::os::raw::c_int,
        bBpp: ::std::os::raw::c_int,
        aBpp: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[link_name = "ImageExtractPalette"]
    pub fn ImageExtractPalette(
        image: Image,
        maxPaletteSize: ::std::os::raw::c_int,
        extractCount: *mut ::std::os::raw::c_int,
    ) -> *mut Color;
}
extern "C" {
    #[link_name = "ImageText"]
    pub fn ImageText(
        text: *const ::std::os::raw::c_char,
        fontSize: ::std::os::raw::c_int,
        color: Color,
    ) -> Image;
}
extern "C" {
    #[link_name = "ImageTextEx"]
    pub fn ImageTextEx(
        font: Font,
        text: *const ::std::os::raw::c_char,
        fontSize: f32,
        spacing: f32,
        tint: Color,
    ) -> Image;
}
extern "C" {
    #[link_name = "ImageDraw"]
    pub fn ImageDraw(dst: *mut Image, src: Image, srcRec: Rectangle, dstRec: Rectangle);
}
extern "C" {
    #[link_name = "ImageDrawRectangle"]
    pub fn ImageDrawRectangle(dst: *mut Image, rec: Rectangle, color: Color);
}
extern "C" {
    #[link_name = "ImageDrawRectangleLines"]
    pub fn ImageDrawRectangleLines(
        dst: *mut Image,
        rec: Rectangle,
        thick: ::std::os::raw::c_int,
        color: Color,
    );
}
extern "C" {
    #[link_name = "ImageDrawText"]
    pub fn ImageDrawText(
        dst: *mut Image,
        position: Vector2,
        text: *const ::std::os::raw::c_char,
        fontSize: ::std::os::raw::c_int,
        color: Color,
    );
}
extern "C" {
    #[link_name = "ImageDrawTextEx"]
    pub fn ImageDrawTextEx(
        dst: *mut Image,
        position: Vector2,
        font: Font,
        text: *const ::std::os::raw::c_char,
        fontSize: f32,
        spacing: f32,
        color: Color,
    );
}
extern "C" {
    #[link_name = "ImageFlipVertical"]
    pub fn ImageFlipVertical(image: *mut Image);
}
extern "C" {
    #[link_name = "ImageFlipHorizontal"]
    pub fn ImageFlipHorizontal(image: *mut Image);
}
extern "C" {
    #[link_name = "ImageRotateCW"]
    pub fn ImageRotateCW(image: *mut Image);
}
extern "C" {
    #[link_name = "ImageRotateCCW"]
    pub fn ImageRotateCCW(image: *mut Image);
}
extern "C" {
    #[link_name = "ImageColorTint"]
    pub fn ImageColorTint(image: *mut Image, color: Color);
}
extern "C" {
    #[link_name = "ImageColorInvert"]
    pub fn ImageColorInvert(image: *mut Image);
}
extern "C" {
    #[link_name = "ImageColorGrayscale"]
    pub fn ImageColorGrayscale(image: *mut Image);
}
extern "C" {
    #[link_name = "ImageColorContrast"]
    pub fn ImageColorContrast(image: *mut Image, contrast: f32);
}
extern "C" {
    #[link_name = "ImageColorBrightness"]
    pub fn ImageColorBrightness(image: *mut Image, brightness: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "ImageColorReplace"]
    pub fn ImageColorReplace(image: *mut Image, color: Color, replace: Color);
}
extern "C" {
    #[link_name = "GenImageColor"]
    pub fn GenImageColor(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        color: Color,
    ) -> Image;
}
extern "C" {
    #[link_name = "GenImageGradientV"]
    pub fn GenImageGradientV(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        top: Color,
        bottom: Color,
    ) -> Image;
}
extern "C" {
    #[link_name = "GenImageGradientH"]
    pub fn GenImageGradientH(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        left: Color,
        right: Color,
    ) -> Image;
}
extern "C" {
    #[link_name = "GenImageGradientRadial"]
    pub fn GenImageGradientRadial(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        density: f32,
        inner: Color,
        outer: Color,
    ) -> Image;
}
extern "C" {
    #[link_name = "GenImageChecked"]
    pub fn GenImageChecked(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        checksX: ::std::os::raw::c_int,
        checksY: ::std::os::raw::c_int,
        col1: Color,
        col2: Color,
    ) -> Image;
}
extern "C" {
    #[link_name = "GenImageWhiteNoise"]
    pub fn GenImageWhiteNoise(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        factor: f32,
    ) -> Image;
}
extern "C" {
    #[link_name = "GenImagePerlinNoise"]
    pub fn GenImagePerlinNoise(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        offsetX: ::std::os::raw::c_int,
        offsetY: ::std::os::raw::c_int,
        scale: f32,
    ) -> Image;
}
extern "C" {
    #[link_name = "GenImageCellular"]
    pub fn GenImageCellular(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        tileSize: ::std::os::raw::c_int,
    ) -> Image;
}
extern "C" {
    #[link_name = "GenTextureMipmaps"]
    pub fn GenTextureMipmaps(texture: *mut Texture2D);
}
extern "C" {
    #[link_name = "SetTextureFilter"]
    pub fn SetTextureFilter(texture: Texture2D, filterMode: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "SetTextureWrap"]
    pub fn SetTextureWrap(texture: Texture2D, wrapMode: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "DrawTexture"]
    pub fn DrawTexture(
        texture: Texture2D,
        posX: ::std::os::raw::c_int,
        posY: ::std::os::raw::c_int,
        tint: Color,
    );
}
extern "C" {
    #[link_name = "DrawTextureV"]
    pub fn DrawTextureV(texture: Texture2D, position: Vector2, tint: Color);
}
extern "C" {
    #[link_name = "DrawTextureEx"]
    pub fn DrawTextureEx(
        texture: Texture2D,
        position: Vector2,
        rotation: f32,
        scale: f32,
        tint: Color,
    );
}
extern "C" {
    #[link_name = "DrawTextureRec"]
    pub fn DrawTextureRec(texture: Texture2D, sourceRec: Rectangle, position: Vector2, tint: Color);
}
extern "C" {
    #[link_name = "DrawTextureQuad"]
    pub fn DrawTextureQuad(
        texture: Texture2D,
        tiling: Vector2,
        offset: Vector2,
        quad: Rectangle,
        tint: Color,
    );
}
extern "C" {
    #[link_name = "DrawTexturePro"]
    pub fn DrawTexturePro(
        texture: Texture2D,
        sourceRec: Rectangle,
        destRec: Rectangle,
        origin: Vector2,
        rotation: f32,
        tint: Color,
    );
}
